# PRAHO

./: .component-parity-ignore  .component-svg-allowlist  .dockerignore  .editorconfig  .env.example  .env.example.dev  .env.example.prod  .env.example.staging  .gitguardian.yaml  .gitignore  .pre-commit-config.yaml  .prettierignore  .venv-darwin  AUDIT_REPORTS_INDEX.md  BILLING_SYSTEM_AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  CODEBASE_ANALYSIS_REPORT.md  CONTRIBUTING.md  DCO  Dockerfile  LICENSE.md  MIGRATION_SUMMARY.md  Makefile  NOTICE.md  PROVIDER_CONSISTENCY_AUDIT.md  PROVIDER_FIXES_ACTION_PLAN.md  README.md  SECURITY_AUDIT_FIX_SUMMARY.md  SECURITY_AUDIT_REPORT.md  SECURITY_REVIEW_STATUS.md  TYPING.md  Users-App-OWASB-top-10  codecov.yml  constraints.txt  debug_api.py  docker-compose.yml  manage.py  migration.md  node_modules  (+12 more)
services/platform/: .bandit  LICENSE  SECURITY_CONFIG.md  manage.py  pyproject.toml  pytest.ini  requirements.txt  tailwind.config.js
services/platform/apps/: __init__.py
services/platform/apps/api/: AUTHENTICATION.md  README.md  __init__.py  apps.py  auth_utils.py  exception_handlers.py  models.py  secure_auth.py  security_linter.py  urls.py
services/platform/apps/audit/: BUSINESS_AUDIT_EVENTS.md  __init__.py  apps.py  compliance.py  file_integrity_service.py  logging_formatters.py  models.py  services.py  siem.py  siem_integration.py  signals.py  tasks.py  urls.py  views.py
services/platform/apps/billing/: __init__.py  apps.py  config.py  currency_models.py  custom_signals.py  document_adjustments.py  efactura_service.py  exchange_rate_service.py  fiscal_identity.py  forms.py  fx_rate_ingestion.py  invoice_models.py  invoice_service.py  metering_models.py  metering_service.py  metering_tasks.py  models.py  numbering_service.py  operator_controls.py  payment_convergence.py  payment_models.py  payment_service.py  pdf_generators.py  proforma_models.py  proforma_service.py  recurring_authorization_service.py  recurring_billing.py  recurring_locking.py  recurring_models.py  recurring_submission_service.py  refund_models.py  refund_service.py  security.py  services.py  signals.py  stripe_metering.py  subscription_models.py  subscription_service.py  tasks.py  tax_evidence.py  (+5 more)
services/platform/apps/common/: __init__.py  aes256_encryption.py  apps.py  checks.py  cnp_validator.py  constants.py  context_processors.py  credential_vault.py  cui_validator.py  decorators.py  encryption.py  eu_vat_validator.py  fields.py  file_upload_security.py  financial_arithmetic.py  key_derivation.py  legal_views.py  logging.py  middleware.py  mixins.py  outbound_http.py  partitioning.py  queue.py  rate_limiting.py  request_ip.py  retry_after.py  ro_counties.py  security_decorators.py  ssh.py  system_status.py  tasks.py  tax_service.py  trace_middleware.py  types.py  utils.py  validators.py  views.py
services/platform/apps/customers/: __init__.py  apps.py  contact_models.py  contact_service.py  contact_views.py  credit_service.py  customer_models.py  customer_service.py  customer_views.py  forms.py  models.py  profile_models.py  profile_service.py  profile_views.py  services.py  signals.py  tasks.py  urls.py  user_management_views.py  views.py
services/platform/apps/domains/: api_client.py  apps.py  domain_names.py  forms.py  models.py  services.py  signals.py  urls.py  views.py  webhooks.py
services/platform/apps/infrastructure/: MIGRATION_NOTES.md  __init__.py  ansible_service.py  apps.py  audit_service.py  aws_service.py  cloud_gateway.py  cost_service.py  deployment_preflight.py  deployment_service.py  digitalocean_service.py  drift_remediation.py  drift_scanner.py  forms.py  hcloud_service.py  maintenance.py  models.py  permissions.py  provider_config.py  provider_sync.py  registration_service.py  signals.py  ssh_key_manager.py  tasks.py  terraform_service.py  urls.py  validation_service.py  views.py  vultr_service.py
services/platform/apps/integrations/: apps.py  models.py  services.py  signals.py  urls.py  views.py
services/platform/apps/notifications/: apps.py  checks.py  models.py  services.py  signals.py  tasks.py  urls.py  views.py  webhooks.py
services/platform/apps/orders/: apps.py  models.py  preflight.py  price_sealing.py  services.py  signals.py  signals_extended.py  tasks.py  urls.py  vat_rules.py  views.py
services/platform/apps/products/: apps.py  models.py  signals.py  urls.py  views.py
services/platform/apps/promotions/: __init__.py  admin.py  apps.py  models.py  services.py  signals.py  urls.py  views.py
services/platform/apps/provisioning/: PRAHO_AS_SOURCE_OF_TRUTH_ANALYSIS.md  TODO_WEEK3_RECOVERY.md  TODO_WEEK4_VERIFICATION.md  VIRTUALMIN_README.md  __init__.py  apps.py  forms.py  models.py  provisioning_service.py  relationship_models.py  (+19 more)
services/platform/assets/: package-lock.json  package.json  tailwind.config.js
services/platform/config/: urls.py  wsgi.py
services/platform/docs/: efactura-submission-and-response-evidence.md  efactura-submission-reconciliation.md
services/platform/requirements/: base.txt  dev.txt  prod.txt  testing.txt
services/platform/scripts/: add_types_to_file.py  backup.py  check_types_modified.py  deploy.py  fix_template_comparisons.py  prevent_type_ignore.py  setup_test_data.py  test_gradual_typing.py  type_coverage_report.py
services/platform/templates/: 503.html  base.html  dashboard.html
services/platform/tests/: TEST_AUDIT_LOG.md  conftest.py  runner.py  test_basic_functionality.py  test_platform_core_functionality.py
services/portal/: LICENSE  STATELESS_ARCHITECTURE.md  conftest.py  gunicorn.conf.py  manage.py  pyproject.toml  pytest.ini  requirements.docker.txt  requirements.txt  tailwind.config.js
services/portal/config/: asgi.py  import_isolation_guard.py  settings.py  urls.py  wsgi.py
services/portal/locale/: .keep
services/portal/logs/: .gitkeep
services/portal/portal/: api_urls.py  api_views.py  services.py  urls.py  views.py
services/portal/templates/: 403.html  404.html  500.html  base.html
services/portal/tests/: README.md  __init__.py  test_portal_security.py
(+2244 files in other folders)
