# ===============================================================================
# PRAHO PLATFORM - PYTHON PROJECT CONFIGURATION
# ===============================================================================

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "praho-platform"
version = "0.3.0"
description = "PRAHO Platform - PRAHO Really Automates Hosting Operations"
authors = [
    {name = "PragmaticHost Development Team", email = "dev@pragmatichost.com"}
]
license = {text = "AGPL-3.0-or-later"}
requires-python = ">=3.11"
keywords = ["hosting", "praho platform", "billing", "web hosting", "django", "htmx", "tailwindcss", "platform"]
classifiers = [
    # Development Phase
    "Development Status :: 3 - Alpha",
    
    # Target Audience
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators", 
    "Intended Audience :: Information Technology",
    "Intended Audience :: End Users/Desktop",
    
    # Framework & Environment
    "Framework :: Django :: 5.2",
    "Environment :: Web Environment",
    "Environment :: Console",
    
    # License
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    
    # Operating System
    "Operating System :: OS Independent",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    
    # Programming Language
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: JavaScript",
    
    # Topic Categories
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: System :: Systems Administration",
    "Topic :: System :: Networking",
    "Topic :: System :: Monitoring",
    "Topic :: Communications :: Email",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    
    # Natural Language
    "Natural Language :: English",
    "Natural Language :: Romanian",
]

# ===============================================================================
# CODE QUALITY CONFIGURATION
# ===============================================================================

[tool.ruff]
# ===============================================================================
# PRAHO PLATFORM - STRATEGIC LINTING CONFIGURATION 🎯
# ===============================================================================
# Focus: Performance, Security, AI/LLM Readability, Business Impact
# Philosophy: Enforce what matters, ignore cosmetic preferences

line-length = 120  # Modern screens, but not strictly enforced
target-version = "py311"
exclude = [
    ".venv",
    "migrations",
    "__pycache__",
    ".git",
    "static",
    "htmlcov",
    "node_modules",
    "media",
    "tests",
]

[tool.ruff.lint]
# ===============================================================================
# STRATEGIC RULE SELECTION - Business Impact Focus 🚀
# ===============================================================================

select = [
    # ✅ CRITICAL - Runtime Errors (ALWAYS ENFORCE)
    "E",      # pycodestyle errors (syntax, indentation)
    "F",      # Pyflakes (undefined names, unused imports) 
    "W",      # pycodestyle warnings
    
    # ⚡ PERFORMANCE - O(N²) Detection & Optimization  
    "PERF",   # Performance anti-patterns (NEW!)
    "C90",    # McCabe complexity (prevent spaghetti code)
    "PIE",    # flake8-pie (performance improvements)
    "SIM",    # flake8-simplify (simpler = faster + fewer bugs)
    
    # 🔒 SECURITY - WARNING ONLY (Manual Review Required)
    "S",      # bandit security issues (WARN, don't ignore)
    "B",      # flake8-bugbear (likely bugs)
    
    # 🐍 DJANGO EXCELLENCE
    "DJ",     # flake8-django (Django best practices) 
    "A",      # flake8-builtins (prevent shadowing)
    
    # 🤖 AI/LLM READABILITY - Help Claude/Copilot
    "I",      # isort (organized imports)
    "N",      # pep8-naming (consistent naming)
    "UP",     # pyupgrade (modern Python syntax)
    "ANN",    # flake8-annotations (type hints for AI)
    
    # 📦 CODE QUALITY
    "C4",     # flake8-comprehensions
    "TID",    # flake8-tidy-imports
    "RUF",    # Ruff-specific rules
    "ERA",    # eradicate (remove commented code)
    
    # 🧹 MAINTENANCE 
    "PL",     # Pylint subset (errors/warnings only)
]

# ===============================================================================
# STRATEGIC IGNORES - Focus on What Matters 🎨
# ===============================================================================

ignore = [
    # ❌ COSMETIC RULES (Don't Block Development)
    "E501",   # Line too long (modern screens handle 120+)
    "W291",   # Trailing whitespace (auto-fixable)
    "W293",   # Blank line with whitespace (cosmetic)
    
    # ❌ DEVELOPMENT HELPERS (Useful in Debug)
    "T201",   # print statements (useful for debugging)
    "T203",   # pprint statements
    
    # ❌ TEST-SPECIFIC ALLOWANCES
    "S101",   # Use of assert (standard in tests)
    # "S105", # Hardcoded password string - WARN EVERYWHERE
    # "S106", # Hardcoded password funcarg - WARN EVERYWHERE
    
    # ❌ DJANGO PATTERNS (Framework Conventions)
    "DTZ005", # timezone-naive datetime (Django handles this)
    "S104",   # Hardcoded bind all interfaces (dev server)
    "DJ008",  # Model meta ordering (style preference)
    
    # ❌ TYPE HINT EDGE CASES
    # "ANN101", # Missing type annotation for self (REMOVED IN NEWER RUFF)
    # "ANN102", # Missing type annotation for cls (REMOVED IN NEWER RUFF)
    "ANN401", # Dynamically typed expressions (Django magic)
    
    # ❌ TODO/FIXME COMMENTS (Development Process)
    "TD002",  # Missing author in TODO
    "TD003",  # Missing issue link in TODO
    "FIX002", # Line contains TODO
    
    # ❌ QUOTE STYLE (Preference, Not Functional)
    "Q000",   # Single vs double quotes
    "COM812", # Trailing comma in Python 3.6+
    
    # ❌ DOCSTRING REQUIREMENTS (Important but not blocking)
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107",
]

[tool.ruff.lint.per-file-ignores]
# ===============================================================================
# FILE-SPECIFIC RULE RELAXATION 📁
# ===============================================================================

# Test files - Focus on functionality over style
"test_*.py" = [
    "S101",     # Allow assert statements  
    "S105", "S106", # Test credentials are acceptable
    "ANN",      # Skip type hints in tests
    "D",        # Skip docstrings in tests
    "PLR2004",  # Allow magic numbers in tests
    "B017",     # Allow pytest.raises() patterns
]
"tests/**/*.py" = [
    "S101", "ANN", "D", "PLR2004", "B017",
    "S105", "S106"  # Test credentials are acceptable
]

# Django management commands - Allow print statements and dev utilities
"manage.py" = ["T201", "T203"]
"**/management/commands/*.py" = [
    "T201", "T203",     # Print statements for progress
    "S602", "S603",     # Subprocess calls (dev utility)
    "S105", "S106"      # Development/test credentials in commands
]

# Development data generation - Allow development patterns
"**/management/commands/generate_sample_data.py" = [
    "T201", "T203",     # Print statements for progress
    "S105", "S106",     # Development credentials only
    "S311",             # Pseudo-random generators (sample data generation)
    "S602", "S603",     # Subprocess calls (dev utility)
    "PLR2004",          # Magic numbers (sample data)
    "ANN",              # Type hints (utility script)
    "F841"              # Unused variables (sample data creation)
]

# Audit event generation - Allow pseudo-random for test data
"**/management/commands/generate_audit_events.py" = [
    "T201", "T203",     # Print statements for progress  
    "S311",             # Pseudo-random generators (test data generation)
    "PLR2004",          # Magic numbers (test data)
    "ANN"               # Type hints (utility script)
]

# GDPR compliance views - Allow complex functions for comprehensive compliance
"apps/audit/views.py" = [
    "PLR0915",          # Too many statements (GDPR compliance needs to be comprehensive)
]

# Migration files - Generated code, minimal linting
"**/migrations/*.py" = [
    "E501",     # Long lines acceptable
    "N806",     # Variable naming (Django generates these)
    "D",        # No docstrings needed
    "ANN",      # No type hints needed
]

# Django admin files - Allow admin patterns and ClassVar conflicts
"**/admin.py" = [
    "RUF012",      # Django admin attributes don't need ClassVar (conflicts with MyPy)
    "PLR0911",     # Admin methods can have many returns 
    "PLR0912",     # Admin methods can have many branches
    "S105", "S106" # Admin may have sample data
]

# Configuration files - Allow longer lines and flexible naming
"config/**/*.py" = ["E501", "N802", "N803"]
"**/settings/*.py" = ["E501", "N802"]

# Development and test settings - Allow fake credentials
"**/settings/dev.py" = [
    "E501", "N802", "N803",     # Development setting patterns
    "S105"                      # Development SECRET_KEY acceptable
]
"**/settings/test.py" = [
    "E501",             # Long lines acceptable
    "S105", "S106",     # Test credentials are acceptable
    "N802", "N803",     # Variable naming (settings pattern)
    "F403", "F405",     # Star imports (settings inheritance)
    "ANN",              # Type hints (configuration file)
    "ERA001"            # Commented code (configuration notes)
]

# Development scripts - Allow print statements and exception handling
"scripts/*.py" = [
    "T201", "T203",     # Print statements (progress reporting)
    "S602", "S603", "S607",  # Subprocess calls (utility scripts)
    "S110",             # Try-except-pass (resilient scripts)
    "E722",             # Bare except (error handling)
    "E402",             # Module import not at top (Django setup)
    "ANN",              # Type hints (utility scripts)
    "PLR0912", "PLR0915", "PLR2004",  # Complexity (utility scripts)
    "C901",             # Complex functions (setup logic)
    "PLC0415",          # Import placement (conditional imports)
    "RUF001",           # Ambiguous unicode (info symbols)
    "ERA001",           # Commented code (development notes)
    "F403", "F405"      # Star imports (settings pattern)
]

# E2E test utilities - Allow test patterns
"tests/e2e/**/*.py" = [
    "ANN", "D",
    "S105", "S106",  # E2E test credentials are acceptable
    "F841",          # Unused variables in E2E setup
    "B007",          # Unused loop variables in test loops
]


# Example files - Allow demonstration patterns  
"examples/**/*.py" = [
    "T201", "T203",     # Print statements for examples
    "F841",             # Unused variables in examples
    "ANN",              # Type hints not required in examples
    "D",                # Docstrings not required in examples
    "PLR2004",          # Magic numbers acceptable in examples
    "S105", "S106",     # Example credentials acceptable
]

# ===============================================================================
# FUNCTION-LEVEL IMPORTS - Strategic Per-Line Approach (ADR-0007) 🔗
# ===============================================================================
# Cross-app imports use per-line `# noqa: PLC0415` comments for surgical precision
# This maintains code quality while allowing strategic architectural patterns

[tool.ruff.lint.isort]
# ===============================================================================
# IMPORT ORGANIZATION - AI/LLM Friendly 🤖
# ===============================================================================
# Organized imports help both humans and AI understand code structure

known-first-party = ["apps", "config", "ui"]
section-order = [
    "future",
    "standard-library", 
    "third-party",
    "first-party",
    "local-folder"
]

[tool.ruff.lint.mccabe]
# ===============================================================================
# COMPLEXITY CONTROL 🧠
# ===============================================================================
# Functions above this threshold need refactoring (O(N²) prevention)
max-complexity = 12  # Balanced: allows reasonable business logic

[tool.ruff.lint.flake8-bugbear]
# ===============================================================================
# BUG PREVENTION 🐛
# ===============================================================================
# Prevent common Python gotchas that cause production issues
extend-immutable-calls = [
    "django.utils.timezone.now",
    "django.conf.settings",
    "uuid.uuid4",
]

[tool.ruff.lint.flake8-annotations]
# ===============================================================================
# TYPE HINT STRATEGY 🏷️
# ===============================================================================
# Help AI/LLMs understand code intent through typing
mypy-init-return = true
suppress-dummy-args = true

# ===============================================================================
# TYPE CHECKING CONFIGURATION - REMOVED
# ===============================================================================
# MyPy has been removed from this project - see ADR-008 for details
# Type safety is now handled through:
# - Ruff type annotation linting (ANN rules)
# - Django 5.0+ built-in typing support
# - Comprehensive test coverage

# ===============================================================================
# MYPY CONFIGURATION
# ===============================================================================
[tool.mypy]
# Strict mode for high code quality
strict = true
python_version = "3.11"

# Django support
plugins = ["mypy_django_plugin.main"]

# Module discovery
# mypy_path = ["apps", "config"]  # Commented out to avoid module conflicts
namespace_packages = true
explicit_package_bases = true
exclude = [
    "migrations/",
    "static/",
    "media/",
    "htmlcov/",
    "node_modules/",
    ".venv/",
]

# Strictness settings
disallow_untyped_defs = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_unimported = true

# Error reporting
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true

# Strategic error filtering - Smart layered ignore strategy (ADR-0009)
# Global safe ignores - Django framework noise
disable_error_code = [
    "attr-defined",     # Django magic attributes (ORM, request.user)
    "empty-body",       # Protocol stubs and abstract methods  
    "redundant-cast",   # Harmless explicit casts
    "no-any-return",    # Django views return Any often
]

# Import handling
ignore_missing_imports = false
follow_imports = "normal"
no_implicit_reexport = true

# Django configuration
[tool.django-stubs]
django_settings_module = "config.settings.dev"
strict_settings = false

# Per-module configuration for gradual typing
[[tool.mypy.overrides]]
module = "*.migrations.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "scripts.*"
disallow_untyped_defs = false

# Django settings files use star imports and dynamic configuration
[[tool.mypy.overrides]]
module = "config.settings.*"
disallow_untyped_defs = false
disable_error_code = ["used-before-def", "name-defined", "misc"]

# ===============================================================================
# SMART LAYERED TYPING STRATEGY (ADR-0009)
# ===============================================================================

# Per-file dangerous ignores - Django UI layer
[[tool.mypy.overrides]]
module = [
    "*.views",
    "*.models", 
    "*.forms",
    "*.admin",
]
disable_error_code = ["assignment", "type-arg"]

# Keep strict checking for business logic - Romanian critical paths
[[tool.mypy.overrides]]
module = [
    "*.services.*",
    "*.utils.*", 
    "*.repos.*",
    "*.gateways.*",
    # Romanian business logic
    "apps.common.validators",
    "apps.billing.calculations",
]
strict = true

# ===============================================================================
# TEST CONFIGURATION
# ===============================================================================

[tool.pytest.ini_options]
# Romanian business compliance testing
DJANGO_SETTINGS_MODULE = "config.settings.test"
addopts = [
    "--verbose",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--reuse-db",
]
testpaths = [
    "tests/users",
    "tests/billing", 
    "tests/customers",
    "tests/audit",
    "tests/common",
    "tests/domains",
    "tests/notifications", 
    "tests/orders",
    "tests/products",
    "tests/provisioning",
    "tests/tickets",
    "tests/ui",
    "tests/integration_tests"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests (cross-app functionality)",
    "e2e: marks tests as end-to-end tests",
    "romanian_compliance: marks tests for Romanian regulations",
    "security: marks security-related tests",
    "unit: marks tests as unit tests (single app/component)",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# ===============================================================================
# COVERAGE CONFIGURATION  
# ===============================================================================

[tool.coverage.run]
# compliance requires high test coverage
source = ["apps", "config", "ui"]
omit = [
    "*/migrations/*",
    "*/tests/*", 
    "*/venv/*",
    "*/env/*",
    "*/.venv/*",
    "manage.py",
    "*/settings/*",
    "*/wsgi.py",
    "*/asgi.py",
]
branch = true

[tool.coverage.report]
# Enforce 90% diff coverage for business compliance
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
show_missing = true
skip_covered = false
precision = 2

[tool.coverage.html]
directory = "htmlcov"

# ===============================================================================
# DEVELOPMENT TOOLS
# ===============================================================================

[tool.djlint]
# Template linting for HTMX + Tailwind templates
profile = "django"
extension = "html"
indent = 2
max_line_length = 100
format_attribute_template_tags = true

[tool.djlint.rules]
# template standards
ignore = "H006,H030,H031"  # Allow img without alt, allow raw text, allow Meta tag

# ===============================================================================
# DEPLOYMENT CONFIGURATION
# ===============================================================================

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "config*", "ui*"]
exclude = ["tests*", "*.tests*"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js", "*.json", "*.txt", "*.md"]
